# SimpleRayTracer

./: .#primitives.hs  .gitignore  BackendRayTrace.hs  Blinn_Phong.hs  Fast_PPM.hs  Object.hs  Primitive.hs  Primitives.hs  Readme.txt  Scene.hs  SceneTypes.hs  Shade.hs  Test.hs
Povray/diagrams-povray-master/src/: TestPov.hs  diff.pov  spec.pov
Povray/diagrams-povray-master/src/Diagrams/Backend/: POVRay.hs
Presentation/Initial/: Makefile  initial.aux  initial.md  initial.nav  initial.pre  initial.tex  initial.toc  initial.vrb
RayTracer/: BackendRayTrace.hs  Blinn_Phong.hs  CmdLine.hs  Colour.hs  Material.hs  Object.hs  Primitive.hs  Readme.txt  Scene.hs  SceneTypes.hs  Test.hs
Thesis/: Makefile  Readme.txt  bib.bib  biblio.bib  clb.tex  header.tex  metadata.yaml  pickled_dict  pre.md  scene.md  template.latex  thesis.md  thesis.tex
raytracer/: raytracer.cabal  stack.yaml
raytracer/app/: Main.hs
raytracer/src/: BackendRayTrace.hs  Blinn_Phong.hs  CmdLine.hs  Object.hs  Primitive.hs  Scene.hs  SceneTypes.hs
