name:                raytracer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/raytracer#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BackendRayTrace
                     , Blinn_Phong
                     , Object
                     , Primitive
                     , Scene
                     , SceneTypes
                     , CmdLine
  build-depends:       base >= 4.7 && < 5
                     , diagrams
                     , diagrams-lib
                     , diagrams-core
                     , optparse-applicative
                     , split
                     , linear
                     , lens
                     , containers
                     , colour
                     , JuicyPixels
                     , bytestring
  default-language:    Haskell2010

executable raytracer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , diagrams-lib
                     , raytracer
  default-language:    Haskell2010

test-suite raytracer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , diagrams-lib
                     , raytracer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/raytracer
